create db table and migrate

--- a/app/views/shortlinks/new.html.erb
+++ b/app/views/shortlinks/new.html.erb
@@ -3,7 +3,7 @@
 <% form_for @shortlink do |f| %>
   <p>
     <%= f.text_field :email %>
-    <%= f.text_field :original_url %>
+    <%= f.text_field :original %>
     <%= f.submit "Create" %>
   </p>
 <% end %>
